smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/trait-targets/trait-trailing.smithy
// Parse error at line 7, column 3 near `deprecated`: Traits cannot be applied to `}`
namespace com.foo

structure Foo {
  baz: String,

  @deprecated
}
